src/api/java5/jna-dds/dds2tmptmp.h


typedef uint64_t dds_instance_handle_t;
typedef enum dds_sample_state
{
  DDS_SST_READ = DDS_READ_SAMPLE_STATE,
  DDS_SST_NOT_READ = DDS_NOT_READ_SAMPLE_STATE
}
dds_sample_state_t;
typedef enum dds_view_state
{
  DDS_VST_NEW = DDS_NEW_VIEW_STATE,
  DDS_VST_OLD = DDS_NOT_NEW_VIEW_STATE
}
dds_view_state_t;
typedef enum dds_instance_state
{
  DDS_IST_ALIVE = DDS_ALIVE_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_DISPOSED = DDS_NOT_ALIVE_DISPOSED_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_NO_WRITERS = DDS_NOT_ALIVE_NO_WRITERS_INSTANCE_STATE
}
dds_instance_state_t;
typedef struct dds_sample_info
{
  dds_sample_state_t sample_state;
  dds_view_state_t view_state;
  dds_instance_state_t instance_state;
  bool valid_data;
  dds_time_t source_timestamp;
  dds_instance_handle_t instance_handle;
  dds_instance_handle_t publication_handle;
  uint32_t disposed_generation_count;
  uint32_t no_writers_generation_count;
  uint32_t sample_rank;
  uint32_t generation_rank;
  uint32_t absolute_generation_rank;
  dds_time_t reception_timestamp; 
}
dds_sample_info_t;
 dds_return_t
dds_read(
         dds_entity_t reader_or_condition,
         void **buf,
         dds_sample_info_t *si,
         size_t bufsz,
         uint32_t maxs);
 dds_return_t
dds_read_wl(
         dds_entity_t reader_or_condition,
         void **buf,
         dds_sample_info_t *si,
         uint32_t maxs);
 dds_return_t
dds_read_mask(
         dds_entity_t reader_or_condition,
         void **buf,
         dds_sample_info_t *si,
         size_t bufsz,
         uint32_t maxs,
         uint32_t mask );
 dds_return_t
dds_read_mask_wl(
         dds_entity_t reader_or_condition,
         void **buf,
         dds_sample_info_t *si,
         uint32_t maxs,
         uint32_t mask );
 dds_return_t
dds_read_instance(
         dds_entity_t reader_or_condition,
         void **buf,
         dds_sample_info_t *si,
         size_t bufsz,
         uint32_t maxs,
         dds_instance_handle_t handle);
 dds_return_t
dds_read_instance_wl(
         dds_entity_t reader_or_condition,
         void **buf,
         dds_sample_info_t *si,
         uint32_t maxs,
         dds_instance_handle_t handle);
 dds_return_t
dds_read_instance_mask(
         dds_entity_t reader_or_condition,
         void **buf,
         dds_sample_info_t *si,
         size_t bufsz,
         uint32_t maxs,
         dds_instance_handle_t handle,
         uint32_t mask);
  dds_return_t
dds_return_loan(
         dds_entity_t reader_or_condition,
        _Inout_updates_(bufsz) void **buf,
         size_t bufsz);