src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * @brief Access and read loaned samples of data reader, readcondition or querycondition.<br>
	 * After dds_read_wl function is being called and the data has been handled, dds_return_loan function must be called to possibly free memory<br>
	 * @param[in]  reader_or_condition Reader, readcondition or querycondition entity<br>
	 * @param[out] buf An array of pointers to samples into which data is read (pointers can be NULL)<br>
	 * @param[out] si Pointer to an array of \ref dds_sample_info_t returned for each data value<br>
	 * @param[in]  maxs Maximum number of samples to read<br>
	 * @returns >=0 - Success (number of samples read).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the given arguments is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_read_wl(dds_entity_t, void**, dds_sample_info_t*, uint32_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1405</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read_wl(DdscLibrary.dds_entity_t reader_or_condition, PointerByReference buf, dds_sample_info si, int maxs);
	/**
	 * @brief Read the collection of data values and sample info from the data reader, readcondition<br>
	 *        or querycondition based on mask.<br>
	 * When using a readcondition or querycondition, their masks are or'd with the given mask.<br>
	 * *<br>
	 * @param[in]  reader_or_condition Reader, readcondition or querycondition entity<br>
	 * @param[out] buf An array of pointers to samples into which data is read (pointers can be NULL)<br>
	 * @param[out] si Pointer to an array of \ref dds_sample_info_t returned for each data value<br>
	 * @param[in]  bufsz The size of buffer provided<br>
	 * @param[in]  maxs Maximum number of samples to read<br>
	 * @param[in]  mask Filter the data based on dds_sample_state_t|dds_view_state_t|dds_instance_state_t.<br>
	 * @returns >=0 - Success (number of samples read).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the given arguments is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_read_mask(dds_entity_t, void**, dds_sample_info_t*, size_t, uint32_t, uint32_t)</code><br>
	 * @param mask In case of ReadCondition, both masks are applied (OR'd)<br>
	 * <i>native declaration : dds2tmptmp.h:1430</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read_mask(DdscLibrary.dds_entity_t reader_or_condition, PointerByReference buf, dds_sample_info si, NativeSize bufsz, int maxs, int mask);
	/**
	 * @brief Access and read loaned samples of data reader, readcondition<br>
	 *        or querycondition based on mask<br>
	 * When using a readcondition or querycondition, their masks are or'd with the given mask.<br>
	 * After dds_read_mask_wl function is being called and the data has been handled, dds_return_loan function must be called to possibly free memory<br>
	 * @param[in]  reader_or_condition Reader, readcondition or querycondition entity<br>
	 * @param[out] buf An array of pointers to samples into which data is read (pointers can be NULL)<br>
	 * @param[out] si Pointer to an array of \ref dds_sample_info_t returned for each data value<br>
	 * @param[in]  maxs Maximum number of samples to read<br>
	 * @param[in]  mask Filter the data based on dds_sample_state_t|dds_view_state_t|dds_instance_state_t.<br>
	 * @returns >=0 - Success (number of samples read).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the given arguments is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_read_mask_wl(dds_entity_t, void**, dds_sample_info_t*, uint32_t, uint32_t)</code><br>
	 * @param mask In case of ReadCondition, both masks are applied (OR'd)<br>
	 * <i>native declaration : dds2tmptmp.h:1454</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read_mask_wl(DdscLibrary.dds_entity_t reader_or_condition, PointerByReference buf, dds_sample_info si, int maxs, int mask);
	/**
	 * @brief Access and read the collection of data values (of same type) and sample info from the<br>
	 *        data reader, readcondition or querycondition, coped by the provided instance handle.<br>
	 * This operation implements the same functionality as dds_read, except that only data scoped to<br>
	 * the provided instance handle is read.<br>
	 * @param[in]  reader_or_condition Reader, readcondition or querycondition entity<br>
	 * @param[out] buf An array of pointers to samples into which data is read (pointers can be NULL)<br>
	 * @param[out] si Pointer to an array of \ref dds_sample_info_t returned for each data value<br>
	 * @param[in]  bufsz The size of buffer provided<br>
	 * @param[in]  maxs Maximum number of samples to read<br>
	 * @param[in]  handle Instance handle related to the samples to read<br>
	 * @returns >=0 - Success (number of samples read).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the given arguments is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                  The instance handle has not been registered with this reader.<br>
	 * Original signature : <code>dds_return_t dds_read_instance(dds_entity_t, void**, dds_sample_info_t*, size_t, uint32_t, dds_instance_handle_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1480</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read_instance(DdscLibrary.dds_entity_t reader_or_condition, PointerByReference buf, dds_sample_info si, NativeSize bufsz, int maxs, long handle);
	/**
	 * @brief Access and read loaned samples of data reader, readcondition or querycondition,<br>
	 *        scoped by the provided instance handle.<br>
	 * This operation implements the same functionality as dds_read_wl, except that only data<br>
	 *        scoped to the provided instance handle is read.<br>
	 * @param[in]  reader_or_condition Reader, readcondition or querycondition entity<br>
	 * @param[out] buf An array of pointers to samples into which data is read (pointers can be NULL)<br>
	 * @param[out] si Pointer to an array of \ref dds_sample_info_t returned for each data value<br>
	 * @param[in]  maxs Maximum number of samples to read<br>
	 * @param[in]  handle Instance handle related to the samples to read<br>
	 * @returns >=0 - Success (number of samples read).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the given arguments is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                  The instance handle has not been registered with this reader.<br>
	 * Original signature : <code>dds_return_t dds_read_instance_wl(dds_entity_t, void**, dds_sample_info_t*, uint32_t, dds_instance_handle_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1505</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read_instance_wl(DdscLibrary.dds_entity_t reader_or_condition, PointerByReference buf, dds_sample_info si, int maxs, long handle);
	/**
	 * @brief Read the collection of data values and sample info from the data reader, readcondition<br>
	 *        or querycondition based on mask and scoped by the provided instance handle.<br>
	 * This operation implements the same functionality as dds_read_mask, except that only data<br>
	 *        scoped to the provided instance handle is read.<br>
	 * @param[in]  reader_or_condition Reader, readcondition or querycondition entity<br>
	 * @param[out] buf An array of pointers to samples into which data is read (pointers can be NULL)<br>
	 * @param[out] si Pointer to an array of \ref dds_sample_info_t returned for each data value<br>
	 * @param[in]  bufsz The size of buffer provided<br>
	 * @param[in]  maxs Maximum number of samples to read<br>
	 * @param[in]  handle Instance handle related to the samples to read<br>
	 * @param[in]  mask Filter the data based on dds_sample_state_t|dds_view_state_t|dds_instance_state_t.<br>
	 * @returns >=0 - Success (number of samples read).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the given arguments is not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                  The instance handle has not been registered with this reader.<br>
	 * Original signature : <code>dds_return_t dds_read_instance_mask(dds_entity_t, void**, dds_sample_info_t*, size_t, uint32_t, dds_instance_handle_t, uint32_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1532</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read_instance_mask(DdscLibrary.dds_entity_t reader_or_condition, PointerByReference buf, dds_sample_info si, NativeSize bufsz, int maxs, long handle, int mask);
